Fix-Spacing and navbar alignment
Shifted navbar links to left for mobile devices

--- a/style.css
+++ b/style.css
@@ -272,13 +272,17 @@ hr{
     }
     .navbar ul{
         display:grid;
+        padding-left: 0rem;
     }
     .project-container p{
         font-size: 1rem;
         margin:auto;
         width: 80vw;
         padding-bottom: 2rem;
-}
+    }
+    .nav-right{
+        text-align:left;
+    }
     }
 
 
